--- a/CV.html
+++ b/CV.html
@@ -188,7 +188,7 @@
         
         <div class="profile-section">
             <div class="profile-pic">
-                <img src="/api/placeholder/150/150 " alt="Sciacalli Adam">
+                <img src="photo_cv_styled.png" alt="Sciacalli Adam">
             </div>
             <h2>SCIACALLI ADAM</h2>
             <h3>JUNIOR DÉVELOPPEUR WEB</h3>
